<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/ic_stock"
            android:title="@string/menu_stock"
            />
        <item
            android:id="@+id/nav_crypto"
            android:icon="@drawable/ic_crypto"
            android:title="@string/menu_crypto"
            />
        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/ic_currency"
            android:title="@string/menu_currency"
            />
        <item
            android:id="@+id/nav_gold"
            android:icon="@drawable/ic_gold"
            android:title="@string/menu_gold"
            />
        <item
            android:id="@+id/nav_own_invest"
            android:icon="@drawable/ic_wallet"
            android:title="@string/menu_own_invest"
            />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/menu_calculator"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"
            />
    </group>
</menu>