<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="matixar.mystockhub.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="matixar.mystockhub.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="matixar.mystockhub.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_stock"
        android:name="matixar.mystockhub.ui.stock.StockFragment"
        android:label="Stock"
        tools:layout="@layout/fragment_stock" />
    <fragment
        android:id="@+id/nav_stock_details"
        android:name="matixar.mystockhub.ui.stock.StockDetailsFragment"
        android:label="Stock"
        tools:layout="@layout/fragment_stock_details" />
    <fragment
        android:id="@+id/nav_crypto"
        android:name="matixar.mystockhub.ui.crypto.CryptoFragment"
        android:label="Crypto"
        tools:layout="@layout/fragment_crypto" />
    <fragment
        android:id="@+id/nav_crypto_details"
        android:name="matixar.mystockhub.ui.crypto.CryptoDetailsFragment"
        android:label="Stock"
        tools:layout="@layout/fragment_crypto_details" />
</navigation>